# km3pipe

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .rtd-requirements.txt  .travis.yml  .zenodo.json  AnalysisClients.py  CHANGELOG.rst  CONTRIBUTING.rst  DAT000009_propa_1-4.evt  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  bootstrap.sh  build.sh  codemeta.json  dev-requirements.txt  environment.yml  evt_example.py  example.py  example_numuNC.evt  frontail.json  legacy_fix.sh  pylint.rc  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  release.sh  requirements-dev.txt  requirements.txt  rtd-requirements.txt  (+6 more)
.gitlab/issue_templates/: Bug.md  Feature.md
benchmarks/cli/: command_line_tools.sh  runtable.sh
benchmarks/database/: ahrs.py  compass.py  database_api.py  streamds.sh
benchmarks/hdf5/: h5extract_default.sh  h5extract_different_options.sh  h5extract_help.sh  h5extractf.sh  h5extractf_different_options.sh
doc/: Makefile  api.rst  cmd.rst  conf.py  contribute.rst  datastructures.rst  db.rst  dev.rst  doc.rst  faq.rst  features.rst  hdf5.rst  index.rst  install.rst  local_db.rst  logging.rst  md2rst.sh  performance.rst  pipeline.rst  summary.rst  table.rst  user_guide.rst  version.txt
doc/_static/: default.css
doc/_templates/: class.rst
dockerfiles/: py2715  py355  py365  py37
docs/: Makefile  api.rst  cmd.rst  conf.py  configuration.rst  contribute.rst  data_formats.rst  data_structures.rst  datastructures.rst  db.rst  dev.rst  doc.rst  examples.rst  file_formats.rst  h5-cli.rst  hdf5.rst  help_modules.rst  help_pumps.rst  index.rst  install.rst  km3pipe.pumps.rst  km3pipe.rst  logging.rst  make.bat  modules.rst  performance.rst  pipeinspector.rst  pipeline.rst  pumps.rst  quick_start.rst  summary.rst  table.rst  tradition.rst  user_guide.rst  version.txt
docs/_static/: custom.css  paper.css
docs/api/: km3pipe.core.rst  km3pipe.decorators.rst  km3pipe.hardware.rst  km3pipe.logger.rst  km3pipe.pumps.daq.rst  km3pipe.pumps.evt.rst  km3pipe.pumps.rst  km3pipe.rst  km3pipe.testing.rst  modules.rst
docs/notebooks/: Fitting+Distributions.ipynb  h5_ant.ipynb.rst  hdf5_convert.md  hdf5_convert.md.rst  pandas_read.md  pid_read.md  pid_read.md.rst
examples/: README.txt  aanet_pump.py  astro_orca.py  ch_event_dump.py  ch_pump.py  clb_pump.py  colormap.py  convex_hull.py  daq_pump.py  dom_hist.py  dump_io_evt.py  evt_pump.py  fitting_dists.py  geometry.py  h5_ant.ipynb  h5_ant.py  hdf5_pump.py  live_detector_monitor.py  make_h5_cut.py  module_workflow.py  monitoring_plots.py  msg_logger.py  performance.py  plot_antares_basic_analysis.py  plot_astro_orca.py  plot_basic_analysis.py  plot_calibrating_hits.py  plot_colormap.py  plot_colourmap_pitfalls.py  plot_convex_hull.py  plot_dom_hits.py  plot_fitting_dists.py  plot_histograms.py  plot_pipeline_toh5.py  plot_pmt_directions.py  plot_pmt_time_slewing.py  plot_provenance.py  plot_sparsecone.py  plot_spherecuts.py  plot_tot_histogram.py  (+6 more)
examples/batch/: README.txt  qprefit.py  qtohdf5.py
examples/data/: KM3NeT_-00000001_20171212.detx  basic_analysis_sample.h5  example.hd5  hist_example.h5  murder_dates.txt  orca_115strings_av23min20mhorizontal_18OMs_alt9mvertical_v1.detx  residuals.h5
examples/highlevel_analysis/: README.txt
examples/misc/: README.txt  elog-slack.py  h5_ant.py
examples/monitoring/: README.txt  hrv.py  io_monit.py  k40_calibration.py  ligier_mirror.py  msg.py  pmt_rates.py  tmch_sum_offsets.py  trigger_rates.py
examples/network/: README.txt  logio.py  udp_dispatcher.py
examples/nogallery/: astro_orca.py  calibration.py  ch_event_dump.py  ch_pump.py  clb_pump.py  create_a_dummy_hdf5_file.py  daq_pump.py  dump_io_evt.py  evt_pump.py  geometry.py  hdf5_pump.py  kp_jfit_readout.py  live_coincidence.py  live_detector_monitor.py  logging_example.py  logio.py  make_h5_cut.py  module_workflow.py  monitoring_plots.py  msg_logger.py  performance.py  pipeline.toml  plot_zt.py  rate_estimator_aanet.py  run_table.txt  slackbot.py  store_df.py  test_kp_jfit.py  tohdf5.py  udp_dispatcher.py
examples/offline_analysis/: README.txt  hdf5sink.py  k40summary.py  plot_evt_readout.py  qk40calib.py  timeslices.py  trigger_contribution.py  trigger_map.py
examples/realtime_analysis/: README.txt  event_dumper.py
examples/stats/: README.txt  guess_the_dist.py  plot_fitting_dists.py  plot_guess_the_dist.py  plot_histograms.py  plot_serial_killer.py
examples/unsorted/: elog-slack.py  h5_ant.py  pandas_read.md.rst
km3modules/: Trawler.py  __init__.py  ahrs.py  common.py  communication.py  dummy.py  feature_extraction.py  fit.py  hardware.py  hits.py  io.py  k40.py  mc.py  parser.py  plot.py  reco.py  topology.py
km3modules/tests/: test_common.py  test_dummy.py  test_foo.py  test_hits.py  test_io.py  test_mc.py
km3pipe/: __init__.py  __version__.py  astro.py  calib.py  cmd.py  common.py  config.py  constants.py  controlhost.py  core.py  core.pyx  core.pyxbld  core.pyxbldc  dataclass_templates.py  dataclasses.py  dataclasses.pyx  dataclasses.pyxbld  dataclasses.pyxbldc  db.py  decorators.py  dev.py  extras.py  hardware.py  logger.py  math.py  mc.py  physics.py  plot.py  pumps.py  pyproject.toml  reco_dtypes.py  shell.py  srv.py  stats.py  style.py  sys.py  testing.py  time.py  tools.py  tools.pyx  (+3 more)
km3pipe/io/: __init__.py  aanet.py  ch.py  clb.py  daq.py  evt.py  hdf5.py  i3.py  jpp.py  offline.py  online.py  pandas.py  pickle.py  root.py  table.py
km3pipe/kp-data/: km3pipe.mplstyle  minimal.mplstyle
km3pipe/pumps/: HDF5Bucket.py  __init__.py  aanet.py  ch.py  clb.py  daq.py  evt.py  hdf5.py  jpp.py  jppListe.py  numpy.py  pickle.py
km3pipe/style/: __init__.py  alba.py  default.py  johannes.py  jonas_phd.py  km3pipe_notebook.py  km3pipe_poster.py  km3pipe_talk.py  moritz.py
pipeinspector/: app.py  gui.py  settings.py  widgets.py
requirements/: dev.txt  extras.txt  install.txt
scripts/: logging.conf  monitoring.py  online_reco.py  run_tests.py  testrunner.py
(+216 files in other folders)
