[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "km3pipe"
authors = [
  {name = "Tamas Gal", email ="tamas.gal@fau.de"},
  {name = "Moritz Lotze", email ="mlotze@km3net.de"},
]
maintainers = [
  {name = "Tamas Gal", email ="tamas.gal@fau.de"}
]
dependencies = [
    "awkward>=2",
    "docopt",
    "h5py",
    "km3db>=0.6.0",
    "km3io>=1.2.2",
    "matplotlib>=3.0.0",
    "numba>=0.49.0",
    "numpy>=2",
    "packaging>=22.0",
    "particle>=0.8.0",
    "passlib",
    "requests",
    "setuptools>=40.6.2",
    "setuptools_scm",
    "tables>=3.10",
    "thepipe>=1.3.7",
    "toml",
    "tqdm"
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
description = "An analysis framework for KM3NeT"
readme = {file = "README.rst", content-type = "text/x-rst"}
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "ipykernel",
    "pandas",
    "pypandoc",
    "scipy>=1.3.1",
    "seaborn",
    "km3astro",
    "km3flux",
    "urwid"
]
extras = [
    "ipykernel",
    "pandas",
    "pypandoc",
    "scipy>=1.3.1",
    "seaborn",
    "km3astro",
    "km3flux",
    "urwid",
    "black==22.3.0",
    "km3net-testdata>=0.4.0",
    "mock",
    "numpydoc",
    "pillow",
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pylint",
    "pytest-watch",
    "sphinx-gallery",
    "sphinx-rtd-theme>=0.3",
    "sphinx>=5.2.1",
    "sphinxcontrib-napoleon>=0.6.1",
    "sphinxcontrib-programoutput>=0.11",
    "sphinxcontrib-websupport>=1.0.1",
    "sphinx-autoapi",
    "twine",
    "wheel"
]

[project.scripts]
km3pipe = "km3pipe.cmd:main"
pipeinspector = "pipeinspector.app:main"
h5extract = "km3pipe.utils.h5extract:main"
h5extractf = "km3pipe.utils.h5extractf:main"
h5info = "km3pipe.utils.h5info:main"
h5tree = "km3pipe.utils.h5tree:main"
h5header = "km3pipe.utils.h5header:main"
ztplot = "km3pipe.utils.ztplot:main"
k40calib = "km3pipe.utils.k40calib:main"
triggermap = "km3pipe.utils.triggermap:main"
nb2sphx = "km3pipe.utils.nb2sphx:main"
ligiermirror = "km3pipe.utils.ligiermirror:main"
qrunprocessor = "km3pipe.utils.qrunprocessor:main"
qrunqaqc = "km3pipe.utils.qrunqaqc:main"
daqsample = "km3pipe.utils.daqsample:main"
tres = "km3pipe.utils.tres:main"


[project.urls]
Homepage = "https://git.km3net.de/km3py/km3pipe"
Documentation = "https://km3py.pages.km3net.de/km3pipe/"
Repository = "https://git.km3net.de/km3py/km3pipe.git"
Issues = "https://git.km3net.de/km3py/km3pipe/-/issues"
Changelog = "https://km3py.pages.km3net.de/km3pipe/changelog.html"

[tool.setuptools_scm]
write_to = "src/km3pipe/version.py"
