[metadata]
name = km3pipe
description = "An analysis framework for KM3NeT"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.km3net.de/km3py/km3pipe
author = Tamas Gal and Moritz Lotze
author_email = tgal@km3net.de
maintainer = Tamas Gal
maintainer_email = tgal@km3net.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    neutrino
    astroparticle
    physics
    HEP
    pipeline

[options]
packages = find:
install_requires =
    awkward>=1.4
    awkward<2.0
    docopt
    h5py
    km3db>=0.6.0
    km3io>=0.28.0
    matplotlib>=3.0.0
    numba>=0.49.0
    numpy>=1.17.0
    particle>=0.8.0
    passlib
    requests
    setuptools>=40.6.2
    setuptools_scm
    tables>=3.4.2
    thepipe>=1.3.7
    toml
    tqdm
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
all =
    ipykernel
    pandas
    pypandoc
    scipy>=1.3.1
    seaborn
    km3astro
    km3flux
    urwid
dev =
    ipykernel
    pandas
    pypandoc
    scipy>=1.3.1
    seaborn
    km3astro
    km3flux
    urwid
    black==22.3.0
    km3net-testdata>=0.4.0
    mock
    numpydoc
    pillow
    pydocstyle
    pytest
    pytest-cov
    pytest-flake8
    pytest-pylint
    pytest-watch
    sphinx-gallery>=0.1.12
    sphinx-rtd-theme>=0.3
    sphinx>=5.2.1
    sphinxcontrib-napoleon>=0.6.1
    sphinxcontrib-programoutput>=0.11
    sphinxcontrib-websupport>=1.0.1
    sphinx-autoapi
    twine
    wheel

[options.entry_points]
console_scripts =
    km3pipe = km3pipe.cmd:main
    pipeinspector = pipeinspector.app:main
    h5extract = km3pipe.utils.h5extract:main
    h5extractf = km3pipe.utils.h5extractf:main
    h5info = km3pipe.utils.h5info:main
    h5tree = km3pipe.utils.h5tree:main
    h5header = km3pipe.utils.h5header:main
    ztplot = km3pipe.utils.ztplot:main
    k40calib = km3pipe.utils.k40calib:main
    triggermap = km3pipe.utils.triggermap:main
    nb2sphx = km3pipe.utils.nb2sphx:main
    ligiermirror = km3pipe.utils.ligiermirror:main
    qrunprocessor = km3pipe.utils.qrunprocessor:main
    qrunqaqc = km3pipe.utils.qrunqaqc:main
    daqsample = km3pipe.utils.daqsample:main
    tres = km3pipe.utils.tres:main

[options.package_data]
* = *.mplstyle, *.py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    src/km3pipe/version.py

[tool:isort]
profile = black
multi_line_output = 3
